# crosschain-scripts

./: .gitignore  CMakeLists.txt  Makefile  README.md
c/: crosschain_lockscript.c  crosschain_typescript.c
